-- poi scrapper -- added poi service and controller

--- a/pie/app/index.html
+++ b/pie/app/index.html
@@ -64,14 +64,20 @@
 <script src="../node_modules/angular-animate/angular-animate.js"></script>
 <script src="../node_modules/angular-aria/angular-aria.js"></script>
 <script src="../node_modules/angular-route/angular-route.js"></script>
+<script src="../node_modules/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="../node_modules/angular-material/angular-material.js"></script>
 
 <script src="./src/users/Users.js"></script>
 <script src="./src/users/UserController.js"></script>
 <script src="./src/users/UserService.js"></script>
 
+<script src="./src/poi/poi.js"></script>
+<script src="./src/poi/poi.service.js"></script>
+<script src="./src/poi/poi.controller.js"></script>
+
+
 <script src="./app.js"></script>
-<script src="./appController.js"></script>
+<script src="app.controller.js"></script>
 
 </body>
 </html>
