--- a/pie/app/index.html
+++ b/pie/app/index.html
@@ -47,7 +47,7 @@
         </md-list>
     </md-sidenav>
 
-    <md-content flex id="content">
+    <md-content class="wrapper" flex id="content">
         <!--<md-icon md-svg-icon="{{ul.selected.avatar}}" class="avatar"></md-icon>
         <h2>{{ul.selected.name}}</h2>
         <p>{{ul.selected.content}}</p>
@@ -55,7 +55,8 @@
         <md-button class="share" md-no-ink ng-click="ul.makeContact(ul.selected)" aria-label="Share with {{ ul.selected.name }}">
           <md-icon md-svg-icon="share"></md-icon>
         </md-button>-->
-        <div ng-view></div>
+
+        <div class="wrapper" ng-view></div>
     </md-content>
 
 </div>
@@ -74,7 +75,7 @@
 <script src="./src/poi/poi.js"></script>
 <script src="./src/poi/poi.service.js"></script>
 <script src="./src/poi/poi.controller.js"></script>
-
+<link rel="stylesheet" href="./src/poi/poi.css"/>
 
 <script src="./app.js"></script>
 <script src="app.controller.js"></script>
