--- a/pie/app/index.html
+++ b/pie/app/index.html
@@ -68,14 +68,18 @@
 <script src="../node_modules/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="../node_modules/angular-material/angular-material.js"></script>
 
-<script src="./src/users/Users.js"></script>
-<script src="./src/users/UserController.js"></script>
-<script src="./src/users/UserService.js"></script>
 
 <script src="./src/poi/poi.js"></script>
 <script src="./src/poi/poi.service.js"></script>
 <script src="./src/poi/poi.controller.js"></script>
 <link rel="stylesheet" href="./src/poi/poi.css"/>
+
+<script src="./src/selection/selection.js"></script>
+<script src="./src/selection/selection.service.js"></script>
+<script src="./src/selection/selection.controller.js"></script>
+<script src="./src/selection/category.filter.js"></script>
+<script src="./src/selection/coverageChip.directive.js"></script>
+<link rel="stylesheet" href="./src/selection/selection.css"/>
 
 <script src="./app.js"></script>
 <script src="app.controller.js"></script>
