--- a/pie/app/index.html
+++ b/pie/app/index.html
@@ -65,7 +65,10 @@
 <script src="../node_modules/angular-animate/angular-animate.js"></script>
 <script src="../node_modules/angular-aria/angular-aria.js"></script>
 <script src="../node_modules/angular-route/angular-route.js"></script>
+<script src="../node_modules/chart.js/dist/Chart.js"></script>
+<script src="../node_modules/angular-chart.js/dist/angular-chart.js"></script>
 <script src="../node_modules/angular-resource/angular-resource.js"></script>
+<script src="../node_modules/lodash/lodash.js"></script>
 <script type="text/javascript" src="../node_modules/angular-material/angular-material.js"></script>
 
 
@@ -80,6 +83,8 @@
 <script src="./src/selection/category.filter.js"></script>
 <script src="./src/selection/coverageChip.directive.js"></script>
 <link rel="stylesheet" href="./src/selection/selection.css"/>
+
+<script src="./src/selection/components/categoryAnalysis/categoryAnalysis.directive.js"></script>
 
 <script src="./app.js"></script>
 <script src="app.controller.js"></script>
