--- a/pie/app/src/selection/selection.html
+++ b/pie/app/src/selection/selection.html
@@ -24,21 +24,27 @@
     <!--<md-whiteframe class="md-whiteframe-2dp">-->
 
     <div layout="column" class="selection-content">
-
-        <h2>Top {{ctrl.selection.top_category_coverage.length}} Category Coverage - {{ctrl.selection.category_coverage_rate * 100}}%</h2>
+        <h1>{{ctrl.restName}}</h1>
+        <h2>Selection Variance: {{ctrl.selection.variance}}, Total Variance:{{ctrl.selection.total_variance}}</h2>
+        <h2>Top {{ctrl.selection.top_category_coverage.length}} Category Coverage -
+            {{ctrl.selection.category_coverage_rate * 100}}%</h2>
 
         <md-whiteframe class="md-whiteframe-2dp">
             <div>
                 <md-chips ng-model="ctrl.selection.top_category_coverage" md-removable="false" readonly="true">
                     <md-chip-template coverage-chip>
-                        <div ng-click="ctrl.selectCategory($chip[0])" title="{{$chip | category}}"  ng-class="{'small-chip':$chip[1]}" class="coverage-category-chip"  >{{$chip | category}}</div>
+                        <div ng-click="ctrl.selectCategory($chip[0])" title="{{$chip | category}}"
+                             ng-class="{'small-chip':$chip[1]}" class="coverage-category-chip">{{$chip | category}}
+                        </div>
 
                     </md-chip-template>
                 </md-chips>
             </div>
         </md-whiteframe>
-        <h2>Category Analysis</h2>
-        <category-analysis category="ctrl.selectedCategory" poi="ctrl.restName"></category-analysis>
+        <div ng-if="ctrl.selectedCategory">
+            <h2>Category Analysis - {{ctrl.selectedCategory}}</h2>
+            <category-analysis category="ctrl.selectedCategory" poi="ctrl.restName"></category-analysis>
+        </div>
     </div>
     <!--</md-whiteframe>-->
 </div>
