--- a/multimedia/app/src/adoption/adoption.html
+++ b/multimedia/app/src/adoption/adoption.html
@@ -1,4 +1,21 @@
 <div>
     <h3>ההחלטה</h3>
-    <p >בחרתי לבנות את המצגת שלי סביב&nbsp;הגורה "פאי" שאני ואשתי בחרנו לאמץ לפני כשנה. מזה זמן אשתי ניסתה לשכנע אותי להביא כלב הביתה, אך אני סרבתי בכל תוקף מכיוון שחששתי שגורה חדשה בבית תהווה מטרד עבורנו כיוון שהיום יום שלנו קשה ומורכבגם כך. לבסוף, כאמור, לפני כשנה התרציתי והסכמתי לבסוף להכניס גורה הביתה, החלטה שעד היום משפיעה רבות על חיי ולשמחתי גם שיפרה אותם לאין שיעור. אני מאמין שהלקח מהסיפור הזה הוא שבסופו של יום, תמיד כדאי להקשיב לאשתך..</p>
+    <p>בחרתי לבנות את המצגת שלי סביב&nbsp;הגורה "פאי" שאני ואשתי בחרנו לאמץ לפני כשנה. מזה זמן אשתי ניסתה לשכנע אותי
+        להביא כלב הביתה, אך אני סרבתי בכל תוקף מכיוון שחששתי שגורה חדשה בבית תהווה מטרד עבורנו כיוון שהיום יום שלנו קשה
+        ומורכבגם כך. לבסוף, כאמור, לפני כשנה התרציתי והסכמתי לבסוף להכניס גורה הביתה, החלטה שעד היום משפיעה רבות על חיי
+        ולשמחתי גם שיפרה אותם לאין שיעור. אני מאמין שהלקח מהסיפור הזה הוא שבסופו של יום, תמיד כדאי להקשיב לאשתך..</p>
+    <h3>האימוץ</h3>
+    <p>באוגוסט 2016 התרחש בתל אביב פסטיבל חיות המחמד - <a
+            href="https://www.facebook.com/kelaviv/?fref=ts">כלביב</a>. "כלביב- יום הכלב של תל אביב" היה הפנינג ראשון
+        מסוגו."כלביב" הוא יום חג לכלבים, שמטרתו להרחיב את השיח אודות אימוץ כלבים, מערכת היחסים בין האדם לכלב וכן לאפשר
+        פלטפורמה שיווקיות לבעלי עסקים מהתחום במטרה לחשוף את הקהל למנעד רחב של מוצרים ואביזרים.</p>
+    <img src="src/adoption/assets/kelaviv.PNG" />
+    <div class="img-caption">פוסטר פרסום לאירוע, facebook.</div>
+    <p>הגענו לפסטיבל במטרה לבדוק את השטח לקראת אפשרות של אימוץ כלב. בפסטיבל הגענו לדוכן של <a
+            href="http://www.sospets.co.il">SOS חיות</a>&nbsp;שם פגשנו את אחיה הזכר של פאי, הכלבה שבסופו של דבר אימצנו. הגור החמוד תפס את
+        עינינו מהרגע הראשון אך לצערנו בזמן שהתלבטנו הגיע משפחה והחליטה שברצונה לאמץ את הגור. מאוכזבים, כבר הגענו למסקנה
+        שנעזוב את האירוע בידיים ריקות אך אז מנכ"לית העמותה סיפרה לנו שלגור החמוד יש אחות ושאם ברצוננו לאמץ אותו עלינו
+        לסור במהירות לסניף אחר של העמותה. רצנו לסניף ושם מצאנו את "פאי" שהצטרפה במהרה למשפחה.</p>
+    <img src="src/adoption/assets/adopt1.jpg" />
+    <div class="img-caption">פאי ביום הראשון שלה איתנו.</div>
 </div>
