--- a/multimedia/app/src/puppy/puppy.html
+++ b/multimedia/app/src/puppy/puppy.html
@@ -5,7 +5,7 @@
         של שנינו (אני איש קבע ואשתי&nbsp;מהנדסת חשמל עובדת אינטל) לא נוכל להשקיע את המאמצים הנדרשים <a
                 href="http://www.vets.co.il/חינוך-גורים">בגידול של גור כלבים</a>. נוכחנו לדעת שאין דבר העומד בפני הרצון,
         כאשר ניהול נכון של הזמן מביא לתוצאות הרצויות.</p>
-
+<div layout="column">
     <ul class="slide-list">
         <li ng-repeat="s in vm.slides track by $index" ng-click="vm.showGallery($index)">
             <img ng-src="{{ s.src }}" alt="slide number {{ $index }}"/>
@@ -14,7 +14,7 @@
 
     <div ng-photoswipe slides="vm.slides" open="vm.open" slide-selector=".slide-list > li > img"
          on-close="vm.closeGallery()" options="vm.opts"></div>
-
+</div>
 
     <h3>שלבים בהתפתחות</h3>
     <p>בהתפתחות גורים יש תקופות חשובות שיקבעו את המשך חייהם איתכם ואת סדרי העולם שלהם , התקופה הכי חשובה ב4 חודשים
