--- a/multimedia/app/index.html
+++ b/multimedia/app/index.html
@@ -79,6 +79,7 @@
 <script src="../node_modules/lodash/lodash.js"></script>
 <script src="../node_modules/photoswipe/dist/photoswipe.js"></script>
 <script src="../node_modules/photoswipe/dist/photoswipe-ui-default.js"></script>
+<script src="../node_modules/angular-audio-player-html5-es6/dist/bundle.js"></script>
 <script src="angular-photoswipe.js"></script>
 <script type="text/javascript" src="../node_modules/angular-material/angular-material.js"></script>
 
