fixed demo minor issues

--- a/pie/app/index.html
+++ b/pie/app/index.html
@@ -32,7 +32,7 @@
     <span>
     <md-icon md-svg-icon="logo" class="logo"></md-icon>
         </span>
-    <h1>Pie</h1>
+    <h1>Podium</h1>
 </md-toolbar>
 
 <div flex layout="row">
