--- a/pie/app/src/selection/selection.html
+++ b/pie/app/src/selection/selection.html
@@ -48,7 +48,7 @@
                         <md-chips ng-model="ctrl.selection.top_category_coverage" md-removable="false" readonly="true">
                             <md-chip-template coverage-chip>
                                 <div ng-click="ctrl.selectCategory($chip[0])" title="{{$chip | category}}"
-                                     ng-class="{'small-chip':$chip[1]}" class="coverage-category-chip">{{$chip |
+                                     ng-class="{'small-chip':$chip[1] && ctrl.selectedCategory != $chip[0],'selected-cat':ctrl.selectedCategory === $chip[0]}" class="coverage-category-chip">{{$chip |
                                     category}}
                                 </div>
 
