added canvas game

--- a/multimedia/app/index.html
+++ b/multimedia/app/index.html
@@ -89,9 +89,12 @@
 <link rel="stylesheet" href="./src/puppy/puppy.css"/>
 <link rel="stylesheet" href="../node_modules/photoswipe/dist/photoswipe.css">
 <link rel="stylesheet" href="../node_modules/photoswipe/dist/default-skin/default-skin.css">
+<script src="./src/escape/escape.js"></script>
+<script src="./src/escape/escape.controller.js"></script>
 
 <script src="./app.js"></script>
 <script src="app.controller.js"></script>
+
 
 </body>
 </html>
