--- a/multimedia/app/src/adoption/adoption.html
+++ b/multimedia/app/src/adoption/adoption.html
@@ -4,6 +4,7 @@
         להביא כלב הביתה, אך אני סרבתי בכל תוקף מכיוון שחששתי שגורה חדשה בבית תהווה מטרד עבורנו כיוון שהיום יום שלנו קשה
         ומורכבגם כך. לבסוף, כאמור, לפני כשנה התרציתי והסכמתי לבסוף להכניס גורה הביתה, החלטה שעד היום משפיעה רבות על חיי
         ולשמחתי גם שיפרה אותם לאין שיעור. אני מאמין שהלקח מהסיפור הזה הוא שבסופו של יום, תמיד כדאי להקשיב לאשתך..</p>
+    <img src="src/adoption/assets/adopt.gif" />
     <h3>האימוץ</h3>
     <p>באוגוסט 2016 התרחש בתל אביב פסטיבל חיות המחמד - <a
             href="https://www.facebook.com/kelaviv/?fref=ts">כלביב</a>. "כלביב- יום הכלב של תל אביב" היה הפנינג ראשון
