--- a/multimedia/app/src/puppy/puppy.html
+++ b/multimedia/app/src/puppy/puppy.html
@@ -34,6 +34,9 @@
 
     <p>עד גיל 7 חודשים הגור ילמד להיגמל מלעשות צרכים בבית. רוב הכלבים יודעים שאסור להשתין איפה שישנים וחשוב
         לעזור להם ללמוד זאת.</p>
+    <img src="src/puppy/assets/puppy.gif" width="320" />
+    <div class="img-caption">בשלבי ההתבגרות הכלב יכול להיות מעט נשכן..</div>
+    <br>
     <div class="graph-head">שעות ההשקעה היומיות לעומת גיל הכלבה</div>
     <canvas id="line" class="chart chart-bar" chart-data="[3,4,3.5,3,2]"
             chart-labels="['2 חודשים - 4 חודשים','5 חודשים - 6 חודשים','6 חודשים - 8 חודשים','8 חודשים - 10 חודשים','11 חודשים ואילך']"
@@ -47,7 +50,7 @@
     <div class="img-caption">סרטון מתוך היו טיוב.</div>
     <p></p>
 
-    <video controls width="560" height="315 ">
+    <video controls width="560" height="315">
         <source src="src/puppy/assets/pie.mp4">
     </video>
     <div class="img-caption">סרטון מהאתר.</div>
